修改租户信息
